--- a/app/src/main/res/layout/view_detail.xml
+++ b/app/src/main/res/layout/view_detail.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layoutDetail"
-    android:layout_width="match_parent"
+    android:layout_width="100dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
